# pyannote-whisper-chatgpt

./: .gitignore  LICENSE  LICENSE.txt  README.md  pyproject.toml
examples/: config_base_en_minute_example.toml  config_large_ja_example.toml
examples/output/: d41586-023-00348-y_23987834_summarized.txt  d41586-023-00348-y_23987834_summarized_chunks.txt  d41586-023-00348-y_23987834_transcribed.csv
src/pyannote_whisper_chatgpt/: utils.py
src/pyannote_whisper_chatgpt/cli/: __init__.py  speech2note.py
